--- a/src/Components/MainMenuStack/StartStack/MainGameStack/shared/Bucket/Bucket.workshop.module.css
+++ b/src/Components/MainMenuStack/StartStack/MainGameStack/shared/Bucket/Bucket.workshop.module.css
@@ -1,6 +1,6 @@
 .bucketDiv {
     position: absolute;
-    z-index: 4;
+    z-index: 1;
     overflow: visible;
     left: var(--wsl-bucket-x, 16px);
     top: var(--wsl-bucket-y, 0px);
@@ -17,4 +17,5 @@
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 1;
 }
